adds basic routes to teacher_controller.rb

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,7 +19,7 @@
       <% if logged_in? %>
         <p><a href="/">Home Page </a> or <a href="/logout">Log Out</a></p>
       <% else %>
-        <p><a href="/signup">Sign Up</a> or <a href="/login">Log In</a></p>
+        <p><a href="/teachers/new">Sign Up</a> or <a href="/login">Log In</a></p>
       <% end%>
 
         <%= yield %>
