fills out and edits routs for lessons

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,7 +2,7 @@
 
     <% if logged_in? %>
             <h2>What would you like to do?</h2>
-                <a href=""></a>
+                <a href="/"></a>
     <% else %>
             <h2>Please Sign Up or Log In to use this website!</h2>
             <h3>Once Logged In, you can:</h3>
