adds links to layout view

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,8 +1,7 @@
 <div class="container">
 
     <% if logged_in? %>
-            <h2>What would you like to do?</h2>
-                <a href="/"></a>
+            <h2>Select one of the links above to begin!</h2>
     <% else %>
             <h2>Please Sign Up or Log In to use this website!</h2>
             <h3>Once Logged In, you can:</h3>
