--- a/app/views/lessons/edit_lesson.erb
+++ b/app/views/lessons/edit_lesson.erb
@@ -3,10 +3,11 @@
 
     <form action="/lessons/<%= @lesson.id %>" method="post">
         <input id="hiddent" type="hidden" name="_method" value="patch">
-        <input type="text" name="Title" id="title" value="<%= @lesson.title %>">
-        <input type="text" name="Learning Objective" id="learning_obj" value ="<%= @lesson.learning_obj %>">
-        <input type="text" name="Length" id="length" value="<%= @lesson.length %>">
-        <input type="text" name="Summary" id="summary" value="<%= @lesson.summary %>">
-        <input type="text" name="Assessment" id="assessment" value="<%= @lesson.assessment %>">
+        <p>Lesson Title: <input type="text" name="title" id="title" value="<%= @lesson.title %>"></p>
+        <p>Learning Objective: <input type="text" name="learning_obj" id="learning_obj" value="<%= @lesson.learning_obj %>"></p>
+        <p>Length of Lesson: <input type="text" name="length" id="length" value="<%= @lesson.length %>"></p>
+        <p>Summary of Lesson: </p>
+        <p><textarea name="summary" id="summary" cols="60" rows="10" ><%= @lesson.summary %></textarea></p>
+        <p>Assessment: <input type="text" name="assessment" id="assessment" value="<%= @lesson.assessment %>"></p>
         <input type="submit" value="submit" id="submit">
     </form>
