--- a/app/views/lessons/new_lesson.erb
+++ b/app/views/lessons/new_lesson.erb
@@ -2,10 +2,11 @@
     <h2>Every field must be filled in! </h2>
 
     <form action="/lessons" method="post">
-        <input type="text" name="Title" id="title">
-        <input type="text" name="Learning Objective" id="learning_obj">
-        <input type="text" name="Length" id="length">
-        <input type="text" name="Summary" id="summary">
-        <input type="text" name="Assessment" id="assessment">
+        <p>Lesson Title: <input type="text" name="title" id="title"></p>
+        <p>Learning Objective: <input type="text" name="learning_obj" id="learning_obj"></p>
+        <p>Length of Lesson: <input type="text" name="length" id="length"></p>
+        <p>Summary of Lesson: </p>
+        <p><textarea name="summary" id="summary" cols="60" rows="10"></textarea></p>
+        <p>Assessment: <input type="text" name="assessment" id="assessment"></p>
         <input type="submit" value="submit" id="submit">
     </form>
