--- a/app/views/teachers/signup.erb
+++ b/app/views/teachers/signup.erb
@@ -5,7 +5,7 @@
     <p>Password: <input type="password" name="password" id="password"></p>
     <p>Select a Subject: 
         <% @subjects.each do |subject| %>
-            <input type="checkbox" name="teacher[][subject_id]" id="<%= subject.id %>" value="<%= subject.id %>"><%= subject.name %>
+            <input type="checkbox" name="subject" id="<%= subject.id %>" value="<%= subject.id %>"><%= subject.name %>
         <% end %>
     </p>
     <p><input type="submit" value="submit"></p>
