--- a/app/views/teachers/teachers.erb
+++ b/app/views/teachers/teachers.erb
@@ -1,6 +1,6 @@
 <h1>All Teachers</h1>
 
-<% @subject.each do |subject| %>
+<% @subjects.each do |subject| %>
     <% if !subject.teachers.empty?%>
         <h2><%= subject.name %></h2>
         <% subject.teachers.each do |teacher|%>
