--- a/app/views/teachers/login.erb
+++ b/app/views/teachers/login.erb
@@ -1,7 +1,10 @@
-<h1>Enter your information to log in below!</h1>
-
-<form action="/login" method="post">
-    <p>Name: <input type="text" name="name" label="name"></p>
-    <p>Password: <input type="password" name="password"></p>
-    <input type="submit" value="Log In">
-</form>
+<!DOCTYPE html>
+    <body>
+        <h1>Enter your information to log in below!</h1>
+        <form action="/login" method="post">
+            <p>Name: <input type="text" name="name" label="name"></p>
+            <p>Password: <input type="password" name="password"></p>
+            <input type="submit" value="Log In">
+        </form>
+    </body>
+</html>
