--- a/app/views/lessons/new_lesson.erb
+++ b/app/views/lessons/new_lesson.erb
@@ -1,12 +1,16 @@
-<h1>Fill in the lesson info below</h1>
-    <h2>Every field must be filled in! </h2>
+<!DOCTYPE html>
+    <body>
+        <h1>Fill in the lesson info below</h1>
+            <h2>Every field must be filled in! </h2>
 
-    <form action="/lessons" method="post">
-        <p>Lesson Title: <input type="text" name="title" id="title"></p>
-        <p>Learning Objective: <input type="text" name="learning_obj" id="learning_obj"></p>
-        <p>Length of Lesson: <input type="text" name="length" id="length"></p>
-        <p>Summary of Lesson: </p>
-        <p><textarea name="summary" id="summary" cols="60" rows="10"></textarea></p>
-        <p>Assessment: <input type="text" name="assessment" id="assessment"></p>
-        <input type="submit" value="submit" id="submit">
-    </form>
+            <form action="/lessons" method="post">
+                <p>Lesson Title: <input type="text" name="title" id="title"></p>
+                <p>Learning Objective: <input type="text" name="learning_obj" id="learning_obj"></p>
+                <p>Length of Lesson: <input type="text" name="length" id="length"></p>
+                <p>Summary of Lesson: </p>
+                <p><textarea name="summary" id="summary" cols="60" rows="10"></textarea></p>
+                <p>Assessment: <input type="text" name="assessment" id="assessment"></p>
+                <input type="submit" value="submit" id="submit">
+            </form>
+    </body>
+</html>
