--- a/app/views/lessons/show_lesson.erb
+++ b/app/views/lessons/show_lesson.erb
@@ -1,17 +1,21 @@
-<h1><%= @lesson.title %></h1>
-    <h2>Owner: <a href="/teachers/<%= @lesson.teacher.slug %>"><%= @lesson.teacher.name %></a></h2>
-    <h2>Subject: <a href="/subjects/<%= @lesson.subject.id %>"><%= @lesson.subject.name%></a></h2>
-    <h2>Learning Objective: <%= @lesson.learning_obj %></h2>
-        <p>Summary: <%= @lesson.summary %></p>
-        <p>Length: <%= @lesson.length %></p>
-        <p>Assessment: <%= @lesson.assessment %></p>
-        <% if current_user == @lesson.teacher%>
-            <form action="/lessons/<%= @lesson.id %>/edit" method="get">
-                <input type="submit" value="Edit Lesson">
-            </form>
+<!DOCTYPE html>
+    <body>
+        <h1><%= @lesson.title %></h1>
+            <h2>Owner: <a href="/teachers/<%= @lesson.teacher.slug %>"><%= @lesson.teacher.name %></a></h2>
+            <h2>Subject: <a href="/subjects/<%= @lesson.subject.id %>"><%= @lesson.subject.name%></a></h2>
+            <h2>Learning Objective: <%= @lesson.learning_obj %></h2>
+                <p>Summary: <%= @lesson.summary %></p>
+                <p>Length: <%= @lesson.length %></p>
+                <p>Assessment: <%= @lesson.assessment %></p>
+                <% if current_user == @lesson.teacher%>
+                    <form action="/lessons/<%= @lesson.id %>/edit" method="get">
+                        <input type="submit" value="Edit Lesson">
+                    </form>
 
-            <form action="/lessons/<%= @lesson.id %>/delete" method="post">
-                <input id="hiddent" type="hidden" name="_method" value="delete">
-                <input type="submit" value="Delete Lesson">
-            </form>
-        <% end%>
+                    <form action="/lessons/<%= @lesson.id %>/delete" method="post">
+                        <input id="hiddent" type="hidden" name="_method" value="delete">
+                        <input type="submit" value="Delete Lesson">
+                    </form>
+                <% end%>
+    </body>
+</html>
