--- a/app/views/subjects/show.erb
+++ b/app/views/subjects/show.erb
@@ -1,6 +1,10 @@
-<h1><%= @subject.name %></h1>
-    <% @subject.lessons.each do |lesson|%>
-        <h2><%= lesson.title %> by <%= lesson.teacher.name %></h2>
-            <p><%= lesson.learning_obj %></p>
-            <a href="/lessons/<%= lesson.id %>">View Lesson</a>
-    <% end%>
+<!DOCTYPE html>
+    <body>
+        <h1><%= @subject.name %></h1>
+            <% @subject.lessons.each do |lesson|%>
+                <h2><%= lesson.title %> by <%= lesson.teacher.name %></h2>
+                    <p><%= lesson.learning_obj %></p>
+                    <a href="/lessons/<%= lesson.id %>">View Lesson</a>
+            <% end%>
+    </body>
+</html>
