--- a/app/views/subjects/subjects.erb
+++ b/app/views/subjects/subjects.erb
@@ -1,4 +1,8 @@
-<h1>Click a subject to see related lessons:</h1>
-    <% @subjects.each do |subject| %>
-        <h2><a href="/subjects/<%= subject.id %>"><%= subject.name %></a></h2>
-    <% end %>
+<!DOCTYPE html>
+    <body>
+        <h1>Click a subject to see related lessons:</h1>
+            <% @subjects.each do |subject| %>
+                <h2><a href="/subjects/<%= subject.id %>"><%= subject.name %></a></h2>
+            <% end %>
+    </body>
+</html>
