--- a/app/views/teachers/signup.erb
+++ b/app/views/teachers/signup.erb
@@ -1,12 +1,16 @@
-<h1>Fill out the form below to create an account!</h1>
+<!DOCTYPE html>
+    <body>
+        <h1>Fill out the form below to create an account!</h1>
 
-<form action="/teachers" method="post">
-    <p>Name: <input type="text" name="name" id="name"></p>
-    <p>Password: <input type="password" name="password" id="password"></p>
-    <p>Select a Subject: 
-        <% @subjects.each do |subject| %>
-            <input type="checkbox" name="subject" id="<%= subject.id %>" value="<%= subject.id %>"><%= subject.name %>
-        <% end %>
-    </p>
-    <p><input type="submit" value="submit"></p>
-</form>
+        <form action="/teachers" method="post">
+            <p>Name: <input type="text" name="name" id="name"></p>
+            <p>Password: <input type="password" name="password" id="password"></p>
+            <p>Select a Subject: 
+                <% @subjects.each do |subject| %>
+                    <input type="checkbox" name="subject" id="<%= subject.id %>" value="<%= subject.id %>"><%= subject.name %>
+                <% end %>
+            </p>
+            <p><input type="submit" value="submit"></p>
+        </form>
+    </body>
+<html>
