--- a/app/views/teachers/slug.erb
+++ b/app/views/teachers/slug.erb
@@ -1,7 +1,11 @@
-<h1><%= @teacher.name %>: <%= @teacher.subject.name %></h1>
-    <h2>Lessons:</h2>
-    <% @teacher.lessons.each do |lesson|%>
-        <h3><%= lesson.title %></h3>
-            <p><%= lesson.learning_obj %></p>
-            <p><a href="/lessons/<%= lesson.id %>">Link</a></p>
-    <% end%>
+<!DOCTYPE html>
+    <body>
+        <h1><%= @teacher.name %>: <%= @teacher.subject.name %></h1>
+            <h2>Lessons:</h2>
+            <% @teacher.lessons.each do |lesson|%>
+                <h3><%= lesson.title %></h3>
+                    <p><%= lesson.learning_obj %></p>
+                    <p><a href="/lessons/<%= lesson.id %>">Link</a></p>
+            <% end%>
+    </body>
+</html>
