--- a/app/views/lessons/lessons.erb
+++ b/app/views/lessons/lessons.erb
@@ -3,8 +3,8 @@
         <h1>Lessons</h1>
             <% @lessons.each do |lesson|%>
                 <h2><%= lesson.title %> by <%= lesson.teacher.name %></h2>
-                    <h3><%= lesson.subject.name %></h3>
-                        <p><%= lesson.learning_obj %></p>
+                    <h3>Title: <%= lesson.subject.name %></h3>
+                        <p>Learning Objective<%= lesson.learning_obj %></p>
                         <p><a href="/lessons/<%= lesson.id %>">Link</a></p>
             <% end%>
     </body>
