adds warning on Teacher Signup view against selecting multiple subjects.

--- a/app/views/teachers/signup.erb
+++ b/app/views/teachers/signup.erb
@@ -10,6 +10,7 @@
                     <input type="checkbox" name="subject" id="<%= subject.id %>" value="<%= subject.id %>"><%= subject.name %>
                 <% end %>
             </p>
+            <p>Warning: If you select more than one subject, it only reads the farthest right.</p>
             <p><input type="submit" value="submit"></p>
         </form>
     </body>
